# PrometheusClient

./: CMakeLists.txt  README.md  a.out  test_lib.cpp
include/: IBaseGroup.hpp  IBaseMetric.hpp  IMetric.hpp  anxilary_functions.hpp  counter.hpp  gauge.hpp  generator.hpp  group.hpp  histogram.hpp  holder.hpp  init.hpp  metric.hpp  outScope.hpp  prometheus.hpp  singleton.hpp
src/: anxilary_functions.cpp  holder.cpp
tests/: 3  test_counter.cpp  test_gauge.cpp  test_generator.cpp  test_histogram.cpp  test_holder.cpp  test_holder_histo.cpp  test_metric.cpp  test_new_interface.cpp  test_obj_metric.cpp  test_prometheus.cpp  test_server.cpp  test_test.cpp
